postgres-macros/tests/fail-stable/enum_missing_variant.stderr
error[E0277]: the trait bound `Vec<User>: sqlm_postgres::query::Query<Struct<(StructColumn<i64, 6898215271518772730>, StructColumn<sqlm_postgres::types::Enum<(EnumVariant<5755620910692865178>, EnumVariant<10465144470622129318>)>, 18137070463969723500>)>>` is not satisfied
  --> tests/fail-stable/enum_missing_variant.rs:20:59
   |
20 |     let _: Vec<User> = sql!("SELECT id, role FROM users").await.unwrap();
   |                                                          -^^^^^
   |                                                          ||
   |                                                          |the trait `sqlm_postgres::query::Query<Struct<(StructColumn<i64, 6898215271518772730>, StructColumn<sqlm_postgres::types::Enum<(EnumVariant<5755620910692865178>, EnumVariant<10465144470622129318>)>, 18137070463969723500>)>>` is not implemented for `Vec<User>`, which is required by `Sql<'_, Struct<(StructColumn<i64, 6898215271518772730>, StructColumn<sqlm_postgres::types::Enum<(EnumVariant<5755620910692865178>, EnumVariant<10465144470622129318>)>, 18137070463969723500>)>, _>: IntoFuture`
   |                                                          help: remove the `.await`
   |
   = help: the following other types implement trait `sqlm_postgres::query::Query<Cols>`:
             <Vec<T> as sqlm_postgres::query::Query<Primitive<<T as SqlType>::Type>>>
             <Vec<T> as sqlm_postgres::query::Query<Struct<Cols>>>
             <Vec<T> as sqlm_postgres::query::Query<sqlm_postgres::types::Array<Vec<<T as SqlType>::Type>>>>
             <Vec<Vec<u8>> as sqlm_postgres::query::Query<Primitive<Bytea>>>
             <Vec<Vec<u8>> as sqlm_postgres::query::Query<sqlm_postgres::types::Array<Vec<Bytea>>>>
             <Vec<u8> as sqlm_postgres::query::Query<Primitive<Bytea>>>
   = note: required for `Sql<'_, Struct<(StructColumn<i64, 6898215271518772730>, StructColumn<sqlm_postgres::types::Enum<(EnumVariant<5755620910692865178>, EnumVariant<10465144470622129318>)>, 18137070463969723500>)>, Vec<User>>` to implement `IntoFuture`
